--- a/bmr/templates/base.html
+++ b/bmr/templates/base.html
@@ -35,7 +35,7 @@
         </li>
         {% endif %}
       </ul>
-      <form action="/" method="post" class="form-inline my-2 my-lg-0">
+      <form action="{{url_for('bookmark.index')}}" method="post" class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" name="search" type="search" placeholder="Search" aria-label="Search">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">{{ gettext('Search') }}</button>
